<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.studio.jozu.bloodmonitor.view.presenter.SignUpConfirmCodePresenter" />

        <variable
            name="signUpConfirmCode"
            type="com.studio.jozu.bloodmonitor.domain.signin.SignUpConfirmCode" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_user_name" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_mail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{signUpConfirmCode.mailAddress}" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_confirm_code" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_confirm_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{signUpConfirmCode.confirmCode}" />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> presenter.onClickSendConfirmCode()}"
                android:text="@string/button_send_confirm_code" />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> presenter.onClickRequestConfirmCode()}"
                android:text="@string/button_request_confirm_code" />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> presenter.onClickShowSignIn()}"
                android:text="@string/button_show_sign_in" />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> presenter.onClickShowSignUp()}"
                android:text="@string/button_show_sign_up" />
        </LinearLayout>

    </ScrollView>

</layout>